--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>About Us </h1>
     <h1>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi quo
       laboriosam, nam omnis iure expedita et consequatur similique tempora
