my school website

--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bright Future Academy</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mediaquary.css" />
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,19 +21,22 @@
   </head>
   <header>
     <div class="logo-container">
-      <div class="logo">Bright Future Academy</div>
-      <div class="nav"></div>
+      <a href="#">
+        <div class="logo">Bright Future Academy</div>
+      </a>
+
       <nav>
+        <div class="menu-toggle" id="menu-toggle">&#9776;</div>
         <ul>
-          <li><a href="">Home</a></li>
+          <li><a href="#">Home</a></li>
 
-          <li><a href="">About</a></li>
+          <li><a href="#">About</a></li>
 
-          <li><a href="">Program</a></li>
+          <li><a href="#">Program</a></li>
 
-          <li><a href="">Admission</a></li>
+          <li><a href="#">Admission</a></li>
 
-          <li><a href="">Contact</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </nav>
       <div class="but">
@@ -135,6 +139,47 @@
       </div>
     </div>
   </main>
-  <footer></footer>
+  <footer>
+    <div class="footcontainer">
+      <div class="Aboutinfo">
+        <div class="logo">
+          <a href="Index.html">
+            <h1>Bright Future Academy</h1>
+          </a>
+        </div>
+
+        <p>BrightFuture Academy gives you the power to unlock your potential</p>
+
+        <div class="medialink">
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-x-twitter"></i>
+          <i class="fa-brands fa-youtube"></i>
+        </div>
+      </div>
+
+      <div class="menulink">
+        <nav>
+          <ul>
+            <li><a href="Index.html">Home</a></li>
+
+            <li><a href="#">About</a></li>
+
+            <li><a href="#">Program</a></li>
+
+            <li><a href="Index.html">Admission</a></li>
+
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <div>
+      <hr />
+      <div class="copyright">
+        <p>Copyright &copy; 2025. All Rights Reserved</p>
+      </div>
+    </div>
+  </footer>
   <body></body>
 </html>
