--- a/contact.html
+++ b/contact.html
@@ -98,4 +98,46 @@
   </head>
   <body></body>
   <link rel="stylesheet" href="style.css" />
+  <footer>
+    <div class="footcontainer">
+      <div class="Aboutinfo">
+        <div class="logo">
+          <a href="Index.html">
+            <h1>Bright Future Academy</h1>
+          </a>
+        </div>
+
+        <p>BrightFuture Academy gives you the power to unlock your potential</p>
+
+        <div class="medialink">
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-x-twitter"></i>
+          <i class="fa-brands fa-youtube"></i>
+        </div>
+      </div>
+
+      <div class="menulink">
+        <nav>
+          <ul>
+            <li><a href="Index.html">Home</a></li>
+
+            <li><a href="#">About</a></li>
+
+            <li><a href="#">Program</a></li>
+
+            <li><a href="Index.html">Admission</a></li>
+
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <div>
+      <hr />
+      <div class="copyright">
+        <p>Copyright &copy; 2025. All Rights Reserved</p>
+      </div>
+    </div>
+  </footer>
 </html>
